--- a/Javascript/RxJs/index.html
+++ b/Javascript/RxJs/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <script data-require="rxjs@4.0.6" data-semver="4.0.6" src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/4.0.6/rx.all.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.5.3/rxjs.umd.js"></script>
 
     <!-- <script src="script.js"></script> -->
     <script src="subjects.js"></script>
