--- a/Javascript/RxJs/index.html
+++ b/Javascript/RxJs/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Learn RxJS with Coursetro</title>
 
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.5.3/rxjs.umd.js"></script>
+        <style>
+            body {
+                font-family: 'Arial';
+                background: #ececec;
+            }
+            ul {
+                list-style-type: none;
+                padding: 20px;
+            }
+            li {
+                padding: 20px;
+                background: white;
+                margin-bottom: 5px;
+            }
+        </style>
+    </head>
+    <body>
+        <ul id="output"></ul>
 
-    <!-- <script src="script.js"></script> -->
-    <script src="subjects.js"></script>
-  
-
-  <body>
-
-    
-    <button id="btn">Drag me</button>
-  </body>
-
+        <script src="dist/main.js"></script>
+    </body>
 </html>
