--- a/Javascript/RxJs/index.html
+++ b/Javascript/RxJs/index.html
@@ -23,6 +23,9 @@
         </style>
     </head>
     <body>
+        <button onclick="test()">Test</button>
+        <button onclick="share()">Share</button>
+        <button onclick="producer()">Producer</button>
         <ul id="output"></ul>
 
         <script src="dist/main.js"></script>
