--- a/Javascript/RxJs/index.html
+++ b/Javascript/RxJs/index.html
@@ -26,7 +26,7 @@
         <button onclick="test()">Test</button>
         <button onclick="share()">Share</button>
         <button onclick="producer()">Producer</button>
-        <ul id="output"></ul>
+        <button onclick="error()">Error</button>
 
         <script src="dist/main.js"></script>
     </body>
