Moved some files

--- a/Javascript/RxJs/index.html
+++ b/Javascript/RxJs/index.html
@@ -11,6 +11,7 @@
         <button onclick="producer()">Producer</button>
         <button onclick="error()">Error</button>
         <button onclick="unsubscribe()">Unsubscribe</button>
+        <button onclick="sequencer()">Sequencer</button>
 
         <script src="dist/main.js"></script>
     </body>
