--- a/Javascript/RxJs/index.html
+++ b/Javascript/RxJs/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Demo</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     </head>
     <body>
-        <button onclick="test()">Test</button>
-        <button onclick="share()">Share</button>
-        <button onclick="producer()">Producer</button>
-        <button onclick="error()">Error</button>
-        <button onclick="unsubscribe()">Unsubscribe</button>
-        <button onclick="sequencer()">Sequencer</button>
+        <div id="toolbar"></div>
 
         <script src="dist/main.js"></script>
     </body>
